[gd_scene load_steps=5 format=3 uid="uid://c5nl02wkbim7b"]

[ext_resource type="Texture2D" uid="uid://dqvyg6uj7xt8j" path="res://icon.svg" id="1_jcxgj"]
[ext_resource type="Script" path="res://Scripts/Entity.gd" id="2_gfcu3"]

[sub_resource type="SpriteFrames" id="SpriteFrames_iud1v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_jcxgj")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5sj0q"]
size = Vector2(128, 261)

[node name="Entity" type="AnimatedSprite2D"]
sprite_frames = SubResource("SpriteFrames_iud1v")
script = ExtResource("2_gfcu3")

[node name="HealthBar" type="TextureProgressBar" parent="."]
offset_left = -64.0
offset_top = 80.0
offset_right = 64.0
offset_bottom = 208.0
texture_progress = ExtResource("1_jcxgj")

[node name="HealthText" type="RichTextLabel" parent="."]
offset_left = -20.0
offset_top = 75.0
offset_right = 20.0
offset_bottom = 115.0
text = "20"
autowrap_mode = 0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1, -61.5)
shape = SubResource("RectangleShape2D_5sj0q")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
